text, button, image and some css

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="welcomeText">
+        <h1 class="display-4">Welcome</h1>
+        <h3>Would you like to eat some delicious pizza?</h3>
+    </div>
+
+    <!-- <img class="mainImage" src="~/images/opening.webp" /> -->
+
+    <a type="button" class="btn btn-secondary mt-2" asp-area="" asp-page="CheckOut/ThankYou">Order the pizza</a>
 </div>
