pizza model, binding

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,10 +7,10 @@
 <div class="text-center">
     <div class="welcomeText">
         <h1 class="display-4">Welcome</h1>
-        <h3>Would you like to eat some delicious pizza?</h3>
+        <h3>Hungry?</h3>
     </div>
 
     <!-- <img class="mainImage" src="~/images/opening.webp" /> -->
 
-    <a type="button" class="btn btn-secondary mt-2" asp-area="" asp-page="CheckOut/ThankYou">Order the pizza</a>
+    <a type="button" class="btn btn-secondary mt-2" asp-area="" asp-page="Pizza">Order the pizza</a>
 </div>
