--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,18 @@ body {
 .welcomeText{
     padding: 75px 25px;
 }
+
+.smallText{
+    text-align: right;
+    color: gray;
+}
+
+.makeYourOwnDiv{
+    background: grey;
+    margin: 0;
+}
+
+.makeYourOwnText{
+    margin: 100px 0 20px 0;
+    color: white;
+}
