--- a/Pages/Pizza.cshtml
+++ b/Pages/Pizza.cshtml
@@ -4,7 +4,30 @@
 }
 
 <div class="text-center">
-	<div class="welcomeText">
-		<h1></h1>
+	<div class="welcomeText text-capitalize text-black">
+		<h1>Our delicious Pizza</h1>
+		<h4>Choose pizza or try to build your own with our pizza builder</h4>
+		
 	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-12 mb-5 mt-5">
+				<div class="w-100 row makeYourOwnDiv">
+					<div class="col-4">
+						<img src="~/images/Pizzas/Create.png" class="w-100" />
+					</div>
+					<div class="col-8 align-items-center">
+						<div class="align-middle makeYourOwnText">
+							<h3 style="text-align:left"></h3>
+							<p style="text-align:left">Make your own pizza!</p>
+							<a class="btn btn-primary" style="float:left" asp-area="" asp-page="Forms/CustomPizza">Try now!</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<p class="smallText"><i>Max 2 pizza's per order</i></p>
 </div>
