--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <div class="welcomeText">
         <h1 class="display-4">Welcome</h1>
-        <h3>Hungry?</h3>
+        <h3>Are you hungry?</h3>
     </div>
 
     <!-- <img class="mainImage" src="~/images/opening.webp" /> -->
