fixing price and name of the pizza

--- a/Pages/CheckOut/CheckOut.cshtml
+++ b/Pages/CheckOut/CheckOut.cshtml
@@ -3,16 +3,17 @@
 @{
 }
 
-<h1>Your Order</h1>
+
 @{
 	var ImagePath = "~/images/Pizzas/" + (@Model.ImageTitle + ".png");
 }
 <div class="align-content-center">
-	<div class="col-3 mx-auto mb-5 align-content-center">
+	<div class="col-3 mx-auto mb-5">
+		<h1>Your Order</h1>
 		<img src="@ImagePath" class="w-100" asp-append-version="true"/>
 		<p>Your order for the @Model.PizzaName pizza is ready!</p>
 		<p>Total price: @Model.PizzaPrice zł</p>
 		<br />
-		<a class= "btn align-content-center alert-primary mt-1 mx-auto " asp-area="" asp-page="ThankYouPage">Confirm Order</a>
+		<a class= "btn alert-primary mt-1 mx-auto " asp-area="" asp-page="ThankYouPage">Confirm Order</a>
 	</div>
 </div>	
