--- a/Pages/Pizza.cshtml
+++ b/Pages/Pizza.cshtml
@@ -32,7 +32,7 @@
 					var imagePath = "~/images/Pizzas/" + pizza.ImageTitle + ".png"; 
 					<div class="col-4 mb-5">
 						<img src="@imagePath" class="w-100" asp-append-version="true" />
-						<a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/Checkout">Get this Pizza!</a>
+						<a class="btn btn-primary mt-1" asp-area="" asp-page="CheckOut/CheckOut" asp-route-ImageTitle="@pizza.ImageTitle" asp-route-PizzaPrice="@pizza.FinalPrice">Get this Pizza!</a>
 						<br />
 					</div>
 				}
