--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders">Orders</a>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +43,6 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - PizzaShop - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
